--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "server.js",
   "scripts": {
     "start": "node server",
-    "server": "nodemon server"
+    "server": "nodemon server",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "DatNgo",
-  "license": "MIT",
+  "license": "DTU",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "config": "^3.2.4",
