--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.12",
+    "node-sass": "^4.13.0",
     "request": "^2.88.0"
   },
   "devDependencies": {
