--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.3",
+    "@types/styled-components": "^4.1.12",
     "axios": "^0.19.0",
     "moment": "^2.24.0",
     "react": "^16.12.0",
@@ -19,8 +21,7 @@
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "typescript": "^3.7.4",
-    "@types/styled-components": "^4.1.12"
+    "typescript": "^3.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
