--- a/package.json
+++ b/package.json
@@ -49,6 +49,10 @@
   },
   "proxy": "http://localhost:5000",
   "devDependencies": {
-    "@types/uuid": "^3.4.6"
+    "@types/uuid": "^3.4.6",
+    "@typescript-eslint/eslint-plugin": "^3.3.0",
+    "@typescript-eslint/parser": "^3.3.0",
+    "eslint": "^6.6.0",
+    "eslint-plugin-react-hooks": "^4.0.4"
   }
 }
