--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,19 +26,12 @@
     },
     "rules": {
         "@typescript-eslint/explicit-function-return-type": "off",
+        "@typescript-eslint/explicit-module-boundary-types": "off",
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "warn",
         "indent": [
             2,
             2
-        ],
-        "linebreak-style": [
-            2,
-            "unix"
-        ],
-        "quotes": [
-            2,
-            "single"
         ],
         "semi": [
             2,
