Updated ESLint and Format code based on Rules

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,5 @@
 {
+    "root": true,
     "parser": "@typescript-eslint/parser",
     "extends": [
         "plugin:@typescript-eslint/recommended",
@@ -11,7 +12,8 @@
         "react-hooks"
     ],
     "parserOptions": {
-        "ecmaVersion": 6,
+        "project": "./tsconfig.json",
+        "ecmaVersion": 2018,
         "sourceType": "module",
         "ecmaFeatures": {
             "jsx": true
@@ -19,7 +21,8 @@
     },
     "env": {
         "browser": true,
-        "es6": true
+        "es6": true,
+        "node": true
     },
     "globals": {
         "arguments": true
@@ -27,11 +30,15 @@
     "rules": {
         "@typescript-eslint/explicit-function-return-type": "off",
         "@typescript-eslint/explicit-module-boundary-types": "off",
+        "@typescript-eslint/no-explicit-any": "off",
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "warn",
         "indent": [
             2,
-            2
+            2,
+            {
+              "SwitchCase": 1
+            }
         ],
         "semi": [
             2,
