--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "client",
-  "version": "0.1.0",
+  "name": "dev-together",
+  "version": "1.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -30,7 +30,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx src"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -52,7 +53,11 @@
     "@types/uuid": "^3.4.6",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
-    "eslint": "^6.6.0",
-    "eslint-plugin-react-hooks": "^4.0.4"
+    "eslint": "^3 || ^4 || ^5 || ^6 || ^7",
+    "eslint-plugin-react-hooks": "^4.0.4",
+    "@types/eslint": "^6.8.1"
+  },
+  "peerDependencies": {
+    "eslint": "^3 || ^4 || ^5 || ^6 || ^7"
   }
 }
